Change: connected the functionality to the navigation buttons

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
   <nav class="navigation">
     <ul class="navigationList">
       <li class="navigationList__item">
-        <a href="#">
+        <a href="#" onclick="movingSiteProcessorForLink(4)">
           <span class="navigationList__text">Works</span>
         </a>
       </li>
 
       <li class="navigationList__item">
-        <a href="#">
+        <a href="#" onclick="movingSiteProcessorForLink(0)">
           <span class="navigationList__text">About</span>
         </a>
       </li>
     
       <li class="navigationList__item">
-        <a href="#">
+        <a href="#" onclick="movingSiteProcessorForLink(5)">
           <span class="navigationList__text">Contacts</span>
         </a>
       </li>
